objects/Apttus__APTS_Template__c.object
<CustomObject>
    <description>Contract language templates available in the system. These templates specify guidance, language, local setitngs, and include Word attachment templates representing the bulk of actual contracts that can be used when creating a first draft . Templates can include standard and non-standard language.</description>
    <fields>
        <fullName>APTPS_CLLA_Is_CLLA_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a CLLA master record?</description>
        <label>CLLA Is CLLA Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTPS_CLLA_Product_Origin__c</fullName>
        <label>CLLA Product Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Tensilica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTPS_Use_Existing_Agreement__c</fullName>
        <label>Use Existing Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus__Agreement_Types__c</fullName>
        <description>Note: If you add a new agreement record type, the type must also be manually added to this set of picklist values to keep record types in sync between agreements and templates.</description>
        <label>Agreement Types</label>
        <picklist>
            <picklistValues>
                <fullName>CLLA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>NDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LWR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIC</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Apttus__BusinessObject__c</fullName>
        <description>The API name of the business object associated with the template</description>
        <inlineHelpText>The API name of the business object associated with the template</inlineHelpText>
        <label>Business Object</label>
        <picklist>
            <controllingField>Apttus__Type__c</controllingField>
            <picklistValues>
                <fullName>Apttus__APTS_Agreement__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apttus_Proposal__Proposal__c</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus__Category__c</fullName>
        <description>Specifies the class of template or clauses into a high level category</description>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus__ClonedFromId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the clause or template this was cloned from</description>
        <inlineHelpText>ID of the clause or template this was cloned from</inlineHelpText>
        <label>Cloned From</label>
        <referenceTo>Apttus__APTS_Template__c</referenceTo>
        <relationshipLabel>Clones</relationshipLabel>
        <relationshipName>Clones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__ClonedFromReferenceId__c</fullName>
        <description>Reference identifier of the clause or template this was cloned from</description>
        <inlineHelpText>Reference identifier of the clause or template this was cloned from</inlineHelpText>
        <label>Cloned From Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__ExcludedMergeChildObjects__c</fullName>
        <description>Specifies the child objects to exclude for a given parent from the merge process. Only applicable when a child object has multiple parents.</description>
        <inlineHelpText>Specifies the child objects to exclude for a given parent from the merge process. Only applicable when a child object has multiple parents.</inlineHelpText>
        <label>Excluded Merge Child Objects</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Guidance__c</fullName>
        <label>Guidance</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Denotes whether the contract template is active or not</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Keywords__c</fullName>
        <description>Keywords on which the contract template can be searched and included in search layouts</description>
        <label>Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swedish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese (Traditional)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese (Simplified)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugese (Brazilian)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus__Locale__c</fullName>
        <description>APTTUS RESERVED.  CUSTOMERS SHOULD NOT CHANGE VALUES</description>
        <label>Locale</label>
        <picklist>
            <picklistValues>
                <fullName>English (United States)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>English (United Kingdom)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English (Canada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English (Ireland)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norwegian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swedish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greek(Greece)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus__Mergefields2__c</fullName>
        <description>Merge fields used both in the template and clauses nested in the template. Automatically maintained by the Apttus Author.</description>
        <inlineHelpText>Merge fields used both in the template and clauses nested in the template. Automatically maintained by the Apttus Author.</inlineHelpText>
        <label>Mergefields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Mergefields__c</fullName>
        <description>Merge fields used in the template. Automatically maintained by the Apttus Author or manually entered using the following form: object1 (field1,field2,...fieldn); object2 (field1,field2,...fieldn); etc</description>
        <inlineHelpText>Merge fields used in the template.</inlineHelpText>
        <label>Mergefields (Internal)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__NeedsPublishing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the template needs to be published.</description>
        <inlineHelpText>Indicates whether the template needs to be published.</inlineHelpText>
        <label>Needs Publishing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Next_Revision_Date__c</fullName>
        <label>Next Revision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__NumberOfClauses__c</fullName>
        <description>Indicates the number of clauses associated with the template</description>
        <inlineHelpText>Indicates the number of clauses associated with the template</inlineHelpText>
        <label>Number Of Clauses</label>
        <summaryForeignKey>Apttus__TemplateClauseReference__c.Apttus__TemplateId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Apttus__OutputPage__c</fullName>
        <description>The name of the Visualforce page to render a simple document in PDF format</description>
        <inlineHelpText>The name of the Visualforce page to render a simple document in PDF format</inlineHelpText>
        <label>Output Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__PubDocId__c</fullName>
        <description>The published template document</description>
        <label>Published Doc ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__PublishStatus__c</fullName>
        <description>The template publish status</description>
        <inlineHelpText>The template publish status</inlineHelpText>
        <label>Publish Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus__Publish__c</fullName>
        <description>&quot;Publish&quot; custom button</description>
        <formula>IF (True, HYPERLINK(&quot;/apex/Apttus__TemplatePublish?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_Publish&quot;, &quot;Publish&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Publish</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__PublishedDate__c</fullName>
        <description>Date when the template was published</description>
        <inlineHelpText>Date when the template was published</inlineHelpText>
        <label>Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus__ReferenceId__c</fullName>
        <description>A unique external reference identifier</description>
        <externalId>true</externalId>
        <inlineHelpText>A unique external reference identifier</inlineHelpText>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Subcategory__c</fullName>
        <label>Subcategory</label>
        <picklist>
            <controllingField>Apttus__Category__c</controllingField>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus__TermExceptionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the term exception associated with the clause or section</description>
        <inlineHelpText>ID of the term exception associated with the clause or section</inlineHelpText>
        <label>Term Exception</label>
        <referenceTo>Apttus__Term_Exception__c</referenceTo>
        <relationshipLabel>Sections/Clauses</relationshipLabel>
        <relationshipName>Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__TextContent__c</fullName>
        <description>The text content of the template document</description>
        <label>Text Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Type__c</fullName>
        <description>Specifies the contract template type which can be either a template or clause type.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Agreement</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Clause</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supporting Document</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus__Unpublish__c</fullName>
        <description>&quot;Unpublish&quot; custom button</description>
        <formula>IF ( LEN( Apttus__PubDocId__c ) &gt; 0 , HYPERLINK(&quot;/apex/Apttus__TemplateUnpublish?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_Unpublish&quot;, &quot;Unpublish&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unpublish</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLLA_Parent_Account__c</fullName>
        <label>CLLA Parent Account</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LWR_CIC_template_type__c</fullName>
        <label>LWR CIC template type</label>
        <picklist>
            <picklistValues>
                <fullName>Assignment Consent Letter - only new parent company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Control Consent Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assignment Consent Letter - only current CDNS customer uses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assignment Consent Letter- new parent company and original CDNS customer user</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NDA_APTPS_Type_of_NDA__c</fullName>
        <label>NDA Type of NDA</label>
        <picklist>
            <picklistValues>
                <fullName>2Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiparty</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NDA_Applicable_Request_Type__c</fullName>
        <label>NDA Applicable Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Create New Cadence CITR to Selected NDA or Use Existing CITR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create new Cadence Master NDA – including multiparty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submit new external Master NDA for review – including multiparty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submit for review an external document associated with an existing external NDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amend Existing NDA Using Cadence Amendment Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Question about an NDA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Type__c</fullName>
        <label>Product Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>Beta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booked Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loaner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Sale Eval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Office &amp; Support Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta(Verification Acceleration Products)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design IP</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Template</label>
    <listViews>
        <fullName>Active_Sections</fullName>
        <columns>NAME</columns>
        <columns>Apttus__IsActive__c</columns>
        <columns>Apttus__Category__c</columns>
        <columns>Apttus__Subcategory__c</columns>
        <columns>Apttus__Agreement_Types__c</columns>
        <columns>Apttus__Guidance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apttus__Type__c</field>
            <operation>equals</operation>
            <value>Section</value>
        </filters>
        <filters>
            <field>Apttus__IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Sections</label>
    </listViews>
    <listViews>
        <fullName>Agreements</fullName>
        <columns>NAME</columns>
        <columns>Apttus__IsActive__c</columns>
        <columns>Apttus__Category__c</columns>
        <columns>Apttus__Subcategory__c</columns>
        <columns>Apttus__Agreement_Types__c</columns>
        <columns>Apttus__Guidance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apttus__Type__c</field>
            <operation>equals</operation>
            <value>Agreement</value>
        </filters>
        <filters>
            <field>Apttus__IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Agreements</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Apttus__Agreements</fullName>
        <columns>NAME</columns>
        <columns>Apttus__IsActive__c</columns>
        <columns>Apttus__Category__c</columns>
        <columns>Apttus__Subcategory__c</columns>
        <columns>Apttus__Agreement_Types__c</columns>
        <columns>Apttus__Guidance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apttus__Type__c</field>
            <operation>equals</operation>
            <value>Agreement</value>
        </filters>
        <label>Agreements</label>
    </listViews>
    <listViews>
        <fullName>Apttus__All</fullName>
        <columns>Apttus__Type__c</columns>
        <columns>NAME</columns>
        <columns>Apttus__IsActive__c</columns>
        <columns>Apttus__Category__c</columns>
        <columns>Apttus__Subcategory__c</columns>
        <columns>Apttus__Agreement_Types__c</columns>
        <columns>Apttus__Guidance__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apttus__IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Apttus__Clauses</fullName>
        <columns>NAME</columns>
        <columns>Apttus__IsActive__c</columns>
        <columns>Apttus__Category__c</columns>
        <columns>Apttus__Subcategory__c</columns>
        <columns>Apttus__Agreement_Types__c</columns>
        <columns>Apttus__Guidance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apttus__Type__c</field>
            <operation>equals</operation>
            <value>Clause</value>
        </filters>
        <label>Clauses</label>
    </listViews>
    <listViews>
        <fullName>Apttus__Proposals</fullName>
        <columns>NAME</columns>
        <columns>Apttus__IsActive__c</columns>
        <columns>Apttus__Category__c</columns>
        <columns>Apttus__Subcategory__c</columns>
        <columns>Apttus__Agreement_Types__c</columns>
        <columns>Apttus__Guidance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apttus__Type__c</field>
            <operation>equals</operation>
            <value>Proposal</value>
        </filters>
        <label>Proposals</label>
    </listViews>
    <listViews>
        <fullName>Apttus__Sections</fullName>
        <columns>NAME</columns>
        <columns>Apttus__IsActive__c</columns>
        <columns>Apttus__Category__c</columns>
        <columns>Apttus__Subcategory__c</columns>
        <columns>Apttus__Agreement_Types__c</columns>
        <columns>Apttus__Guidance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apttus__Type__c</field>
            <operation>equals</operation>
            <value>Section</value>
        </filters>
        <label>Sections</label>
    </listViews>
    <listViews>
        <fullName>Apttus__SupportingDocuments</fullName>
        <columns>NAME</columns>
        <columns>Apttus__IsActive__c</columns>
        <columns>Apttus__Category__c</columns>
        <columns>Apttus__Subcategory__c</columns>
        <columns>Apttus__Agreement_Types__c</columns>
        <columns>Apttus__Guidance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apttus__Type__c</field>
            <operation>equals</operation>
            <value>Supporting Document</value>
        </filters>
        <label>Supporting Documents</label>
    </listViews>
    <listViews>
        <fullName>CDNS_HSD_RUNDA_Team_APTS_Template</fullName>
        <filterScope>Queue</filterScope>
        <label>CDNS HSD RUNDA Team</label>
        <queue>CDNS_HSD_RUNDA_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LWR</fullName>
        <columns>NAME</columns>
        <columns>Apttus__Agreement_Types__c</columns>
        <columns>Apttus__Category__c</columns>
        <columns>APTPS_CLLA_Is_CLLA_Master__c</columns>
        <columns>CLLA_Parent_Account__c</columns>
        <columns>APTPS_CLLA_Product_Origin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apttus__Agreement_Types__c</field>
            <operation>equals</operation>
            <value>LWR</value>
        </filters>
        <label>LWR</label>
    </listViews>
    <listViews>
        <fullName>NDA</fullName>
        <columns>NAME</columns>
        <columns>Apttus__Type__c</columns>
        <columns>Apttus__Guidance__c</columns>
        <columns>Apttus__Category__c</columns>
        <columns>Apttus__Subcategory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apttus__Agreement_Types__c</field>
            <operation>equals</operation>
            <value>NDA</value>
        </filters>
        <filters>
            <field>Apttus__IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>NDA</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>